fixed issue with horizontal viewports on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,8 +8,5 @@ body {
    height: 100%;
 }
 
-html {
-   height: 100%;
-}
 
 
